# K8-App-Platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  how --name-only <commit-hash>  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
configs/k8s/: KubeletConfiguration.yaml  d.json
private/: README.md
pymicroservicesbase/products/demo_product/backend/: README.md
pymicroservicesbase/products/generic/: README.md
pymicroservicesbase/sdk/cache/: abstract_async_cache.py  abstract_cache.py  in_memory_async_cache.py  redis_async_cache.py
pymicroservicesbase/sdk/cache/tests/: cache_tests.py
pymicroservicesbase/sdk/cache/tests/fixtures/: in_memory_async_cache.py  redis_async_cache.py
pymicroservicesbase/sdk/cache/tests/utils/: generate.py  test_utils.py
pymicroservicesbase/sdk/discovery/: in_memory_service_discovery.py  product_discovery_service.py  service_discovery.py  service_discovery_service.py
pymicroservicesbase/sdk/registery/: in_memory_service_registery.py  service_registery.py
pymicroservicesbase/sdk/services/internal/: internal_authentication_service.py  internal_authorization_service.py  internal_product_service.py  internal_service_client.py  internal_user_service_client.py
pymicroservicesbase/sdk/sql/: __init__.py  base_table_type.py  constants.py  engine_factory.py  exceptions.py  sql_delegator.py
pymicroservicesbase/sdk/sql/base/: base_table.py
pymicroservicesbase/sdk/sql/migrations/: env.py
pymicroservicesbase/sdk/sql/mixins/: id_mixin.py  tenant_mixin.py  timestamp_mixin.py
pymicroservicesbase/sdk/sql/postgres/: asyncpg.py
pymicroservicesbase/sdk/sql/session/: session_context.py  session_context_manager.py  session_context_registery.py  session_type.py
pymicroservicesbase/sdk/web_api/: web_context.py  web_context_dep.py
pymicroservicesbase/sdk/web_api/common/db/: database_middleware.py
pymicroservicesbase/sdk/web_api/common/discovery/: discovery.py
pymicroservicesbase/sdk/web_api/common/health_check/: __init__.py
pymicroservicesbase/sdk/web_api/common/observability/: promethus.py
pymicroservicesbase/sdk/web_api/common/params/: condition_param.py  filter_param.py  limit_param.py  mapping_param.py  offset_param.py  query_param.py  query_params.py  sort_param.py
pymicroservicesbase/sdk/web_api/common/requests/: request_purge_headers_middleware.py  request_with_headers_middleware.py
pymicroservicesbase/sdk/web_api/common/responses/: forward_headers_middleware.py  orjson_response.py  response_purge_headers_middleware.py  response_with_headers_middleware.py
pymicroservicesbase/sdk/web_api/common/schemas/: created_at_schema.py  created_by_schema.py  filter_option.py  get_many_schema.py  identifier_schema.py  range.py  updated_at_schema.py  updated_by_schema.py  updated_by_user_schema.py
pymicroservicesbase/sdk/web_api/common/serving/: serve.py
pymicroservicesbase/sdk/web_api/common/types/: full_name_type.py  hashed_password_type.py  host_url_type.py  identifier_type.py  json_str_type.py  letters_only_type.py  password_type.py  port_type.py  time_delta.py  timezone_datetime.py  username_type.py
pymicroservicesbase/sdk/web_api/core_api/: base_model.py  base_web_command.py  web_router.py  web_service.py  web_service_container.py
pymicroservicesbase/sdk/web_api/core_api/configuration/: base_app_config.py  base_runtime_config.py  base_system_config.py  base_web_service_config.py
pymicroservicesbase/sdk/web_api/core_api/correlation/: correlation_id_context_var.py
pymicroservicesbase/sdk/web_api/core_api/errors/: base_error_handler.py  central_error_handler.py  error_middleware.py  set_error_handlers.py  web_service_error.py  web_service_error_handler.py
pymicroservicesbase/sdk/web_api/core_api/lifespan/: abstract_lifespan.py  root_lifespan.py
pymicroservicesbase/sdk/web_api/core_api/logging/: logging_middleware.py  uvicorn_logger_type.py  web_service_logger.py
pymicroservicesbase/sdk/web_api/variants/: base_web_service.py  full_web_service.py
pymicroservicesbase/services/api_gateway_service/: .dockerignore  .env.example  README.md  logger.py  main.py
pymicroservicesbase/services/api_gateway_service/src/: app.py
pymicroservicesbase/services/authentication_service/: .env.example  .gitignore  logger.py  main.py
pymicroservicesbase/services/authentication_service/src/: app.py
pymicroservicesbase/services/monitoring_service/prometheus/: entrypoint.sh
pymicroservicesbase/services/products_service/: .env.example  README copy.md  logger.py
pymicroservicesbase/services/products_service/src/: app.py
pymicroservicesbase/services/user_service/: logger.py  main.py
pymicroservicesbase/services/user_service/src/: app.py
pymicroservicesbase/shared/constants/: headers.py  media_type.py  tokens.py
pymicroservicesbase/shared/errors/: base_error.py
pymicroservicesbase/shared/logging/: __init__.py  abstract_logger.py  base_logger.py  create_logger.py  json_formatter.py  log_level.py  log_level_type.py  logger_factory.py  logging.conf  logging_manager.py  root_logger.py  string_formatter.py  warning_collector.py
pymicroservicesbase/utils/cryptography/symmetric/: fernet.py
pymicroservicesbase/utils/datetime_utils/: conversion.py  date_time.py  datetime.py  formats.py  ltr.py  timezone.py
pymicroservicesbase/utils/debugger/: debugger.py
pymicroservicesbase/utils/id/: generate_id.py  valid_uuid.py
pymicroservicesbase/utils/patterns/singleton/: singleton_meta.py  thread_safe_singleton.py
pymicroservicesbase/utils/security/: password.py
pymicroservicesbase/utils/timeout/: timeout.py
pymicroservicesbase/utils/tokens/: base_token_factory.py  jwt_token_factory.py  token_factory.py  token_key_type.py  token_type.py  totp_token_factory.py  utils.py  uuid_token_factory.py
reports/: README.md
test/fixtures/: event_loop.py
test/shared/logging/: logger.py
tools/scripts/: commit.sh  create_networks.sh
tools/scripts/products/ui/: dev.sh
tools/scripts/services/: postgres.sh  redis.sh
tools/scripts/web_service/: dev.sh
(+1647 files in other folders)
